--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^2.3.2",
     "history": "^1.13.1",
     "lodash": "^3.10.1",
+    "material-ui": "^0.13.4",
     "node-uuid": "^1.4.7",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
